# AYO

./: .gitignore  .gitleaks.toml  AGENTS.md  BUILD_QUEUE.md  README.md  alembic.ini  ayo.py  pyproject.toml
AYO-Mobile/: app.json  package-lock.json  package.json
BACKEND/: main.py  observability.py
BIBLE/: AYO_FOUNDERS_BIBLE.md
DESIGN/: ANALYTICS_SYSTEM.md  API_PLAN.md  APP_SCREENS.md  AYO_AI.md  BACKUP_RECOVERY.md  CLOUD_INFRASTRUCTURE.md  DRIVER_APP.md  DRIVER_MATCHING.md  FRAUD_DETECTION.md  HOME_SCREEN.md  MAP_SYSTEM.md  NOTIFICATION_SYSTEM.md  PRICING_ENGINE.md  RIDE_BOOKING_SCREEN.md  SAFETY_SYSTEM.md  SERVER_ARCHITECTURE.md
DOCUMENTS/: DATABASE_PLAN.md
database/: certify_restore.py  migrate.py
docs/: ADR_COURIER_PICKUP_REFINEMENT_2026-07-24.md  AYO_ARCHITECTURE.md  AYO_AUDIT_ARCHITECTURE.md  AYO_AUTHENTICATION_IDENTITY_ARCHITECTURE.md  AYO_AUTHENTICATION_THREAT_MODEL.md  AYO_AUTHORIZATION_ARCHITECTURE.md  AYO_BACKEND_CERTIFICATION_CHECKPOINT_MANIFEST_2026-07-24.md  AYO_COMPUTE_STRATEGY.md  AYO_CONSTITUTION.md  AYO_COURIER_PICKUP_ARCHITECTURE_LAUNCH_ADMISSION_PACKAGE.md  AYO_COURIER_PICKUP_CTO_GATE_REPORT_2026-07-24.md  AYO_COURIER_PICKUP_INCREMENT_1_IMPLEMENTATION.md  AYO_COURIER_PICKUP_INCREMENT_1_IMPLEMENTATION_AUTHORIZATION_2026-07-24.md  AYO_COURIER_PICKUP_INCREMENT_1_VERIFICATION_CERTIFICATION_2026-07-24.md  AYO_COURIER_PICKUP_MODELS_AND_BOUNDARIES.md  AYO_COURIER_PICKUP_RISK_LAUNCH_SEQUENCE.md  AYO_DATABASE_MIGRATIONS.md  AYO_DECISION_LOG.md  AYO_DISPATCH_ARCHITECTURE_PROPOSAL.md  AYO_ENGINEERING_WORKFLOW.md  AYO_FUTURE_TRUST_AND_AI_SUPPORT_ENGINES.md  AYO_MASTER_BLUEPRINT.md  AYO_MIGRATION_0016_PREPRODUCTION_CORRECTION_GOVERNANCE_2026-07-24.md  AYO_PLATFORM_PRINCIPLES.md  AYO_REPOSITORY_QUALITY_COMMANDS.md  (+118 more)
(+515 files in other folders)
