[project]
name = "ayo-backend"
version = "0.0.1"
description = "AYO FastAPI backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "argon2-cffi>=25.1,<26",
    "fastapi>=0.139,<0.140",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "psycopg[binary]>=3.3,<3.4",
    "sqlalchemy>=2.0.51,<2.1",
    "uvicorn[standard]>=0.51,<0.52",
]

[dependency-groups]
dev = [
    "bandit[toml]>=1.9,<2",
    "httpx2>=2.5,<3",
    "pip-audit>=2.10,<3",
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "ruff>=0.14,<1",
]
migration = [
    "alembic>=1.18.5,<1.19",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "SIM", "UP"]
ignore = ["UP017", "UP042"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=BACKEND",
    "--cov-report=term-missing",
    "--cov-fail-under=70",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires an external PostgreSQL 17 test database",
    "audit: requires an external PostgreSQL 17 audit test database",
    "known_defect: characterization of a confirmed defect intentionally left unfixed",
    "migration: requires an empty disposable PostgreSQL 17 migration database",
    "session_persistence: requires PostgreSQL 17 session and rate-limit storage",
    "authentication: requires PostgreSQL 17 identity and authentication storage",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
